add icon and text

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/all.css">
     <title>Ngunduh</title>
 </head>
 <body>
@@ -14,10 +15,25 @@
     <div class="story">
         <div class="substory">
             <ul class="circle">
-                <li class="circleit"></li>
-                <li class="circleit"></li>
-                <li class="circleit"></li>
-                <li class="circleit"></li>
+                <li class="circleit">
+                    <span class="icon">
+                        <i class="fab fa-instagram fa-lg"></i>
+                    </span>
+                </li>
+                <li class="circleit">
+                    <span class="icon">
+                        <i class="fab fa-facebook fa-lg"></i>
+                    </span>
+                </li>
+                <li class="circleit">
+                    <span class="iconyoutube">
+                        <i class="fab fa-youtube fa-lg"></i>
+                    </span>
+                </li>
+                <li class="circleit">
+                    <span class="icon"><i class="fab fa-tiktok fa-lg"></i>
+                    </span>
+                </li>
                 <div class="smcircle">
                     <span class="smcircleit"></span>
                     <span class="smcircleit"></span>
@@ -27,6 +43,11 @@
         </div>
     </div>
     <div class="content"></div>
-    <div class="footer"></div>
+    <span class="papan">
+        <p><b>select the icon above,to download your video or photo. <i>according to the social media</i></b></p>
+    </span>
+    <div class="footer">
+        <h6>Made BY : nam & elly</h6>
+    </div>
 </body>
 </html>
