buat tampilan sosmed

--- a/index.html
+++ b/index.html
@@ -17,21 +17,30 @@
             <ul class="circle">
                 <li class="circleit">
                     <span class="icon">
-                        <i class="fab fa-instagram fa-lg"></i>
+                        <a href="ig.html">
+                            <i class="fab fa-instagram fa-lg"></i>
+                        </a>
                     </span>
                 </li>
                 <li class="circleit">
                     <span class="icon">
-                        <i class="fab fa-facebook fa-lg"></i>
+                        <a href="fb.html">
+                            <i class="fab fa-facebook fa-lg"></i>
+                        </a>
                     </span>
                 </li>
                 <li class="circleit">
                     <span class="iconyoutube">
-                        <i class="fab fa-youtube fa-lg"></i>
+                        <a href="yt.html">
+                            <i class="fab fa-youtube fa-lg"></i>
+                        </a>
                     </span>
                 </li>
                 <li class="circleit">
-                    <span class="icon"><i class="fab fa-tiktok fa-lg"></i>
+                    <span class="icon">
+                        <a href="tktk.html">
+                            <i class="fab fa-tiktok fa-lg"></i>
+                        </a>
                     </span>
                 </li>
                 <div class="smcircle">
@@ -42,12 +51,8 @@
             </ul>
         </div>
     </div>
-    <div class="content"></div>
-    <span class="papan">
-        <p><b>select the icon above,to download your video or photo. <i>according to the social media</i></b></p>
-    </span>
-    <div class="footer">
-        <h6>Made BY : nam & elly</h6>
+    <div class="konten">
+        <p>select the icon above,to download your video or photo. according to the social media</p>
     </div>
 </body>
 </html>
