--- a/yt.html
+++ b/yt.html
@@ -17,7 +17,7 @@
         <a class="home" href="index.html">Home</a>
     </div>
     <main>
-        <form action="print.php" method="get">
+        <form action="yt.php" method="get">
             <input type="text" name="url" id="" placeholder="insert link here ...">
             <button type="submit">go!</button>
         </form>
