--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 </li>
                 <li class="circleit">
                     <span class="icon">
-                        <a href="fb.html">
-                            <i class="fab fa-facebook fa-lg"></i>
+                        <a href="tw.html">
+                            <i class="fab fa-twitter fa-lg"></i>
                         </a>
                     </span>
                 </li>
