--- a/tw.html
+++ b/tw.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href="css/all.css">
-    <title>Fb Downloader</title>
+    <title>Tw Downloader</title>
 </head>
 <body>
     <header>
-        <i class="fab fa-facebook fa-5x"></i>
-        <p class="judul">Fb<br>Downloader</p>
+        <i class="fab fa-twitter fa-5x"></i>
+        <p class="judul">Tw<br>Downloader</p>
     </header>
     <div class="line">
         <a class="home" href="index.html">Home</a>
     </div>
     <main>
-        <form action="print.php" method="get">
+        <form action="tw.php" method="get">
             <input type="text" name="url" id="" placeholder="insert link here ...">
             <button type="submit">go!</button>
         </form>
